# ClauseWise

./: .env.example  .gitignore  CLAUDE.md  ClauseWise_Implementation.md  LICENSE  Makefile  README.md  pyproject.toml
data/ontology/: risk_ontology.yaml
evaluation/configs/: full_eval.yaml
notebooks/: generate_figures.py  generate_tables.py
src/: config.py
src/api/: main.py  models.py
src/evaluation/: metrics.py
src/generation/: pipeline.py  prompts.py
src/ingestion/: extract_cuad.py  parse_consumer.py
src/retrieval/: build_index.py  engine.py
src/risk/: classifier.py
src/verification/: verifier.py
tests/: conftest.py  test_api.py  test_generation.py  test_retrieval.py  test_verification.py
